[gd_scene load_steps=4 format=3 uid="uid://bajltgvpw66x5"]

[ext_resource type="Script" path="res://ShaderBlock/ShaderBlock.gd" id="1_2yuej"]
[ext_resource type="Texture2D" uid="uid://daob7qu1snhel" path="res://Assets/Icons/shader_tool.png" id="2_ytx66"]
[ext_resource type="Texture2D" uid="uid://d2btjbthnc6ft" path="res://Assets/Icons/shader_close.png" id="3_qjgy6"]

[node name="ShaderBlock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -830.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2yuej")

[node name="ShaderRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 250.0
mouse_filter = 2

[node name="EditButton" type="Button" parent="."]
layout_mode = 0
offset_right = 26.0
offset_bottom = 26.0
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_colors/icon_normal_color = Color(0.27, 0.647167, 1, 0)
theme_override_colors/icon_focus_color = Color(0.64, 0.826, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(0.270588, 0.647059, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
button_mask = 2
icon = ExtResource("2_ytx66")

[node name="CloseButton" type="Button" parent="."]
layout_mode = 0
offset_left = 224.0
offset_right = 250.0
offset_bottom = 26.0
focus_mode = 0
theme_type_variation = &"FlatButton"
theme_override_colors/icon_normal_color = Color(1, 0.27, 0.476833, 0)
theme_override_colors/icon_focus_color = Color(1, 0.69, 0.777833, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 0.27451, 0.482353, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
button_mask = 2
icon = ExtResource("3_qjgy6")
